Fix:  Spacing in lists

--- a/wp-content/themes/dunkerskulturhus/assets/source/sass/component/box/panel.scss
+++ b/wp-content/themes/dunkerskulturhus/assets/source/sass/component/box/panel.scss
@@ -87,9 +87,9 @@
     }
 }
 
-.box-panel ul:not(.social-feed-gallery) li {
-    padding: 10px 24px !important; 
-}
+// .box-panel ul:not(.social-feed-gallery) li {
+//     padding: 10px 24px !important; 
+// }
 
 .box-panel ul:not(.social-feed-gallery) li a .link-item { 
     left: 0;
